--- a/package.json
+++ b/package.json
@@ -9,13 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.18",
+    "@react-navigation/stack": "^6.3.21",
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.6.2",
     "expo": "~51.0.28",
+    "expo-camera": "~15.0.16",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-heroicons": "^3.2.0",
+    "react-native-paper": "^5.10.6",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
